...
            tools:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/imgUserPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"
...
